# flameshot-uploader

./: Cargo.toml  README.md
src/: clipboard.rs  config.rs  flameshot.rs  lib.rs  main.rs  sxcu.rs
src/cli/: add.rs  default.rs  delete.rs  mod.rs  show.rs  ss.rs
